+ Finally added hardware acceleration to reqWin popups. This adds 264 (ungzipped) bytes to CSS but removes 269 from JS, so it's a fair trade, and most importantly, it really rocks to have full-page popups show up in a fluid way on my mobile device. It's a treat to see. Just try the media tag help popup on any media item page to see what I mean. Another drawback is that IE 6-9 will no longer show any animation on reqWin, but I just don't care about animations on IE these days; if I ever allow for js files to be compiled with an 'ie' suffix, I'll probably restore the animation code. Fair enough. (script.js, index.css)
! Fixed IE7 showing user boxes on the right by default... I'm not exactly sure why I did that to begin with, but it's true I don't test much with that browser... (extra.ie7.css)

--- a/Themes/default/skins/extra.ie7.css
+++ b/Themes/default/skins/extra.ie7.css
@@ -119,7 +119,7 @@ li.sep
 
 .poster
 	display: block
-	float: right
+	float: left
 	width: 20%
 	padding-right: 0
 
